fix: feature cards visibility and docs section on landing page

--- a/web/site/index.html
+++ b/web/site/index.html
@@ -206,7 +206,7 @@
         padding: 1.1rem;
         background: linear-gradient(150deg, rgba(255, 255, 255, 0.02), rgba(245, 158, 11, 0.03));
         color: var(--text);
-        opacity: 0;
+        opacity: 1;
         transform: translateY(18px);
       }
 
@@ -502,7 +502,8 @@ Connection: persistent WebSocket (WSS), heartbeat every 30s, auto-reconnect with
         <div class="container">
           <h2 class="section-title">Documentation</h2>
           <p class="section-copy">
-            Placeholder docs section for now. Point this to your generated docs host when it goes live.
+            Documentation is on GitHub. Start with the README for quickstart, architecture overview, and API reference.
+            <a href="https://github.com/marcus-qen/legator">Read the docs →</a>
           </p>
         </div>
       </section>
