web: refine landing page — fix contrast, width, alignment, add CTA

--- a/web/site/index.html
+++ b/web/site/index.html
@@ -8,7 +8,7 @@
       :root {
         --bg: #0f1117;
         --text: #e6e8ef;
-        --muted: #a3a9b6;
+        --muted: #b8bcc6;
         --line: #2a2f3a;
         --accent: #d4a053;
       }
@@ -26,7 +26,7 @@
       }
 
       main {
-        padding: 3.5rem 1.25rem 4rem;
+        padding: 3.5rem 1.5rem 4rem;
       }
 
       h1,
@@ -88,7 +88,7 @@
       }
 
       .what {
-        max-width: 46rem;
+        max-width: 40rem;
       }
 
       .what p + p {
@@ -154,19 +154,19 @@
         }
 
         .what {
-          margin-left: 1.5rem;
+          margin-left: 2rem;
         }
 
         .architecture {
-          margin-left: 6rem;
+          margin-left: 2rem;
         }
 
         .quickstart {
-          margin-left: 3rem;
+          margin-left: 2rem;
         }
 
         .stats {
-          margin-left: 9rem;
+          margin-left: 2rem;
         }
 
         footer {
@@ -199,6 +199,7 @@
           infrastructure — but the AI never touches your servers directly. Brain and hands are separate.
         </p>
         <p class="split">Brain decides. Probe executes. Policy gates everything.</p>
+        <p style="margin-top:1.1rem"><a href="https://github.com/marcus-qen/legator">→ GitHub</a></p>
       </header>
 
       <section class="what" aria-labelledby="what-it-does">
